--- a/views/partials/admin/sideBar.ejs
+++ b/views/partials/admin/sideBar.ejs
@@ -1,75 +1,78 @@
 <!-- Sidebar -->
-    <div class="sidebar">
-      <div class="sidebar-header">
-        <h4 class="text-white mb-0">Tempus</h4>
-      </div>
-      
-      <nav class="mt-3">
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a href="/admin/dashboard" class="nav-link-custom">
-              <i class="bi bi-grid-3x3-gap me-2"></i>
-              <p class="mb-0 ms-2">Dashboard</p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="/admin/category" class="nav-link-custom">
-              <i class="bi bi-grid me-2"></i>
-              <p class="mb-0 ms-2">Categories</p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="/admin/products" class="nav-link-custom">
-              <i class="bi bi-box me-2"></i>
-              <p class="mb-0 ms-2">Products</p>
-            </a>
-          </li>
+<div class="sidebar">
+  <div class="sidebar-header">
+    <h4 class="text-white mb-0">Tempus</h4>
+  </div>
 
-          <li class="nav-item">
-            <a href="/admin/users" class="nav-link-custom">
-              <i class="bi bi-people me-2"></i>
-              <p class="mb-0 ms-2">Users</p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="/admin/orders" class="nav-link-custom">
-              <i class="bi bi-bag me-2"></i>
-              <p class="mb-0 ms-2">Orders</p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="/admin/orders" class="nav-link-custom">
-              <i class="bi bi-ticket-perforated me-2"></i>
-              <p class="mb-0 ms-2">Coupons</p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="/admin/orders" class="nav-link-custom">
-              <i class="bi bi-tags me-2"></i>
-              <p class="mb-0 ms-2">Offers</p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="/admin/orders" class="nav-link-custom">
-              <i class="bi bi-image me-2"></i>
-              <p class="mb-0 ms-2">Banners</p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="/admin/orders" class="nav-link-custom">
-              <i class="bi bi-chat-square-text me-2"></i>
-              <p class="mb-0 ms-2">Reviews</p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="/admin/profile" class="nav-link-custom">
-              <i class="bi bi-person-circle me-2"></i>
-              <p class="mb-0 ms-2">My Profile</p>
-            </a>
-          </li>
-          
-          
-          
-        </ul>
-      </nav>
-    </div>
+  <nav class="mt-3">
+    <ul class="nav flex-column">
+      <li class="nav-item">
+        <a href="/admin/dashboard" class="nav-link-custom">
+          <i class="bi bi-grid-3x3-gap me-2"></i>
+          <p class="mb-0 ms-2">Dashboard</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/admin/category" class="nav-link-custom">
+          <i class="bi bi-grid me-2"></i>
+          <p class="mb-0 ms-2">Categories</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/admin/products" class="nav-link-custom">
+          <i class="bi bi-box me-2"></i>
+          <p class="mb-0 ms-2">Products</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/admin/inventory" class="nav-link-custom">
+          <i class="bi bi-clipboard-data me-2"></i> 
+          <p class="mb-0 ms-2">Inventory</p>
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a href="/admin/users" class="nav-link-custom">
+          <i class="bi bi-people me-2"></i>
+          <p class="mb-0 ms-2">Users</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/admin/orders" class="nav-link-custom">
+          <i class="bi bi-bag me-2"></i>
+          <p class="mb-0 ms-2">Orders</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/admin/orders" class="nav-link-custom">
+          <i class="bi bi-ticket-perforated me-2"></i>
+          <p class="mb-0 ms-2">Coupons</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/admin/orders" class="nav-link-custom">
+          <i class="bi bi-tags me-2"></i>
+          <p class="mb-0 ms-2">Offers</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/admin/orders" class="nav-link-custom">
+          <i class="bi bi-image me-2"></i>
+          <p class="mb-0 ms-2">Banners</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/admin/orders" class="nav-link-custom">
+          <i class="bi bi-chat-square-text me-2"></i>
+          <p class="mb-0 ms-2">Reviews</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/admin/profile" class="nav-link-custom">
+          <i class="bi bi-person-circle me-2"></i>
+          <p class="mb-0 ms-2">My Profile</p>
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
