--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -102,7 +102,7 @@
                     </td>
                     <td class="product-name">
                       <h2 class="h5 text-black"><%=item.productName%></h2>
-                      <% if(item.quantity == 0){ %>
+                      <% if(item.quantity <= 0){ %>
                       <small class="text-danger fw-bold"
                         >⚠ This item is out of stock</small
                       >
