--- a/views/partials/admin/sideBar.ejs
+++ b/views/partials/admin/sideBar.ejs
@@ -26,7 +26,7 @@
       </li>
       <li class="nav-item">
         <a href="/admin/inventory" class="nav-link-custom">
-          <i class="bi bi-clipboard-data me-2"></i> 
+          <i class="bi bi-clipboard-data me-2"></i>
           <p class="mb-0 ms-2">Inventory</p>
         </a>
       </li>
@@ -44,17 +44,45 @@
         </a>
       </li>
       <li class="nav-item">
-        <a href="/admin/orders" class="nav-link-custom">
+        <a href="/admin/coupons" class="nav-link-custom">
           <i class="bi bi-ticket-perforated me-2"></i>
           <p class="mb-0 ms-2">Coupons</p>
         </a>
       </li>
       <li class="nav-item">
-        <a href="/admin/orders" class="nav-link-custom">
-          <i class="bi bi-tags me-2"></i>
-          <p class="mb-0 ms-2">Offers</p>
+        <a
+          class="nav-link-custom d-flex justify-content-between align-items-center"
+          data-bs-toggle="collapse"
+          href="#offers"
+          role="button"
+          aria-expanded="false"
+          aria-controls="offers"
+        >
+          <div>
+            <i class="bi bi-tags me-2"></i>
+            <span>Offers</span>
+          </div>
+
+          <!-- Caret icon -->
+          <i class="bi bi-chevron-down toggle-caret"></i>
         </a>
+
+        <div class="collapse" id="offers">
+          <ul class="nav flex-column ms-4">
+            <li class="nav-item">
+              <a href="/admin/categoryOffers" class="nav-link-custom">
+                <span class="sub-item">Category Offers</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="/admin/productOffers" class="nav-link-custom">
+                <span class="sub-item">Product Offers</span>
+              </a>
+            </li>
+          </ul>
+        </div>
       </li>
+
       <li class="nav-item">
         <a href="/admin/orders" class="nav-link-custom">
           <i class="bi bi-image me-2"></i>
