--- a/views/user/userSignup.ejs
+++ b/views/user/userSignup.ejs
@@ -131,6 +131,17 @@
                   <p id="err6" style="color: rgb(157, 63, 63)"></p>
                 </div>
 
+                <!-- Referral code -->
+                <div class="mb-3">
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="referralCode"
+                    name="referralCode"
+                    placeholder="Do you have a referral code?"
+                  />
+                </div>
+
                 <!-- Submit -->
                 <button type="submit" class="btn btn-primary w-100">
                   Sign Up
