--- a/views/user/checkOut.ejs
+++ b/views/user/checkOut.ejs
@@ -680,37 +680,59 @@
                     </tbody>
                   </table>
 
-                  <div class="border p-3 mb-5">
-                    <h3 class="h6 mb-0">
-                      <a
-                        class="d-block"
-                        data-bs-toggle="collapse"
-                        href="#collapseCOD"
-                        role="button"
-                        aria-expanded="false"
-                        aria-controls="collapsepaypal"
-                        >Cash on Delivery</a
-                      >
-                    </h3>
+                  <!-- Payment method selector -->
+                  <div class="mb-3">
+                    <label class="form-label d-block mb-2"
+                      >Choose Payment Method</label
+                    >
 
-                    <div class="collapse" id="collapseCOD">
-                      <div class="py-2">
-                        <p class="mb-0">
-                          Pay via cash or UPI directly to the delivery agent
-                          when your order arrives.
-                        </p>
-                      </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="paymentMethod"
+                        id="pmCOD"
+                        value="COD"
+                      />
+                      <label class="form-check-label" for="pmCOD"
+                        >Cash On Delivery (COD)</label
+                      >
+                    </div>
+
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="paymentMethod"
+                        id="pmOnline"
+                        value="ONLINE"
+                        checked
+                      />
+                      <label class="form-check-label" for="pmOnline"
+                        >Pay Online (Razorpay)</label
+                      >
                     </div>
                   </div>
 
                   <div class="form-group">
                     <button
                       class="btn btn-black btn-lg py-3 btn-block placeOrder"
+                      onclick="payNow()"
                       id="placeOrder"
                     >
                       Place Order
                     </button>
                   </div>
+
+                  <!-- Hidden checkout data for JS -->
+                  <div
+                    id="checkout-data"
+                    data-name="<%=userData.userName%>"
+                    data-email="<%=userData.email%>"
+                    data-phoneNo="<%=userData.phoneNo%>"
+                    data-order-total="<%= orderTotal %>"
+                    style="display: none"
+                  ></div>
                 </div>
               </div>
             </div>
@@ -724,6 +746,8 @@
     <%- include('../../views/partials/user/footer')%>
     <!--FOOTER-->
     <!-- Js Plugins -->
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
     <script src="/js3/jquery-3.3.1.min.js"></script>
     <script src="/js3/bootstrap.min.js"></script>
     <script src="/js3/jquery.magnific-popup.min.js"></script>
